# default-const-fn

./: Cargo.toml  LICENSE  README.md  TokenStream.txt  TokenTree.txt
src/: lib.rs
tests/: main.rs  min_test.rs
